--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Google Homepage</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<img src="https://www.google.com.br/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
-	<form>
-		<input name="query" type="text">
-	</form>
+	<ul>
+		<li><a href="#">Gmail</a></li>
+		<li><a href="#">Images</a></li>
+		<li><a href="#">Blocks</a></li>
+		<li><a href="#">Notifications</a></li>
+		<li><a href="#"><img src=""></a></li>
+	</ul>
+	<div class="search">
+		<img src="https://www.google.com.br/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+		<form>
+			<input name="query" type="text">
+		</form>
+	</div>
 </body>
 </html>
