--- a/index.html
+++ b/index.html
@@ -19,5 +19,24 @@
 			<input name="query" type="text">
 		</form>
 	</div>
+	<div class="footer">
+		<div id="first_section">
+			<p>Brasil</p>
+		</div>
+		<hr>
+		<div id="second_section">
+			<ul id="business">
+				<li><a href="#">Publicidade</a></li>
+				<li><a href="#">Negócios</a></li>
+				<li><a href="#">Sobre</a></li>
+			</ul>
+			<ul id="account">
+				<li><a href="#">Privacidade</a></li>
+				<li><a href="#">Termos</a></li>
+				<li><a href="#">Configurações</a></li>
+				<li><a href="#">Usar Google.com</a></li>
+			</ul>
+		</div>
+	</div>
 </body>
 </html>
