--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<ul>
-		<li><a href="#">Gmail</a></li>
-		<li><a href="#">Images</a></li>
+		<li><a href="https://www.gmail.com">Gmail</a></li>
+		<li><a href="https://www.google.com.br/imghp?hl=pt-BR&tab=wi">Images</a></li>
 		<li><a href="#">Blocks</a></li>
 		<li><a href="#">Notifications</a></li>
 		<li><a href="#"><img src=""></a></li>
