--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<ul>
+	<ul class="menu">
 		<li><a href="https://www.gmail.com">Gmail</a></li>
 		<li><a href="https://www.google.com.br/imghp?hl=pt-BR&tab=wi">Images</a></li>
 		<li><a href="#">Blocks</a></li>
