Add buttons and update navbar

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<ul class="menu">
 		<li><a href="https://www.gmail.com">Gmail</a></li>
 		<li><a href="https://www.google.com.br/imghp?hl=pt-BR&tab=wi">Images</a></li>
-		<li><a href="#">Blocks</a></li>
+		<li><a href="#">Google Apps</a></li>
 		<li><a href="#">Notifications</a></li>
-		<li><a href="#"><img src=""></a></li>
+		<li><a href="#"><img class="image" src="https://avatars3.githubusercontent.com/u/4064192?s=460&v=4"></a></li>
 	</ul>
 	<div class="search">
 		<img src="https://www.google.com.br/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
@@ -19,6 +19,11 @@
 			<input name="query" type="text">
 		</form>
 	</div>
+	<div class="buttons">
+		<button type="button"><span class="button-text"><strong>Pesquisa Google</strong></span></button>
+		<button type="button"><span class="button-text"><strong>Estou com sorte</strong></span></button>
+	</div>
+	<p class="available">Disponibilizado pelo Google em: <a href="https://www.google.com/">English</a></p>
 	<div class="footer">
 		<div id="first_section">
 			<p>Brasil</p>
