Edit added text and update styles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<button type="button"><span class="button-text"><strong>Pesquisa Google</strong></span></button>
 		<button type="button"><span class="button-text"><strong>Estou com sorte</strong></span></button>
 	</div>
-	<p class="available">Disponibilizado pelo Google em: <a href="https://www.google.com/">English</a></p>
+	<p class="available">Disponibilizado pelo Google em: <a class="english" href="https://www.google.com/">English</a></p>
 	<div class="footer">
 		<div id="first_section">
 			<p>Brasil</p>
